--- a/package.json
+++ b/package.json
@@ -15,13 +15,16 @@
     "@fortawesome/vue-fontawesome": "^2.0.8",
     "axios": "^0.27.2",
     "core-js": "^3.8.3",
+    "gsap": "^3.10.4",
     "vue": "^2.6.14",
     "vue-class-component": "^7.2.3",
     "vue-property-decorator": "^9.1.2",
     "vue-router": "^3.5.1",
+    "vue-socket.io": "^3.0.10",
     "vuex": "^3.6.2"
   },
   "devDependencies": {
+    "@types/node": "^18.6.3",
     "@typescript-eslint/eslint-plugin": "^5.4.0",
     "@typescript-eslint/parser": "^5.4.0",
     "@vue/cli-plugin-babel": "~5.0.0",
