--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@fortawesome/vue-fontawesome": "^2.0.8",
     "axios": "^0.27.2",
     "core-js": "^3.8.3",
+    "moment-timezone": "^0.5.37",
     "vue": "^2.6.14",
     "vue-class-component": "^7.2.3",
     "vue-property-decorator": "^9.1.2",
