--- a/package.json
+++ b/package.json
@@ -8,16 +8,19 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@auth0/auth0-spa-js": "^1.22.5",
     "@fortawesome/fontawesome-svg-core": "^6.1.2",
     "@fortawesome/free-brands-svg-icons": "^6.1.2",
     "@fortawesome/free-regular-svg-icons": "^6.1.2",
     "@fortawesome/free-solid-svg-icons": "^6.1.2",
     "@fortawesome/vue-fontawesome": "^2.0.8",
     "@paypal/paypal-js": "^5.1.1",
+    "@types/axios": "^0.14.0",
     "axios": "^0.27.2",
     "core-js": "^3.8.3",
     "moment-timezone": "^0.5.37",
     "vue": "^2.6.14",
+    "vue-axios": "^3.5.0",
     "vue-class-component": "^7.2.3",
     "vue-property-decorator": "^9.1.2",
     "vue-router": "^3.5.1",
