--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/axios": "^0.14.0",
     "axios": "^0.27.2",
     "core-js": "^3.8.3",
+    "gsap": "^3.11.4",
     "moment-timezone": "^0.5.37",
     "vue": "^2.6.14",
     "vue-axios": "^2.1.5",
@@ -25,6 +26,7 @@
     "vue-property-decorator": "^9.1.2",
     "vue-router": "^3.5.1",
     "vue-router-multiguard": "^1.0.3",
+    "vue-socket.io": "^3.0.10",
     "vuedraggable": "^2.24.3",
     "vuetify": "^2.6.0",
     "vuex": "^3.6.2"
